--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form</title>
 </head>
+
 <body>
-    
+    <form action=”https://sandbox.merge.academy/api/message” method=”POST”>
+        <div>
+          <label for="name">Ім’я:</label>
+          <input name=”name” id="name" required>
+        </div>
+        <div>
+          <label for="say">Повідомлення:</label>
+          <input name=”message” id="say" required>
+        </div>
+        <div>
+          <button>Відправити</button>
+        </div>
+      </form>
 </body>
+
 </html>
