--- a/index.html
+++ b/index.html
@@ -9,19 +9,17 @@
 </head>
 
 <body>
-    <form action=”https://sandbox.merge.academy/api/message” method=”POST”>
-        <div>
-          <label for="name">Ім’я:</label>
-          <input name=”name” id="name" required>
-        </div>
-        <div>
-          <label for="say">Повідомлення:</label>
-          <input name=”message” id="say" required>
-        </div>
-        <div>
-          <button>Відправити</button>
-        </div>
-      </form>
+    <form action="https://sandbox.merge.academy/api/message" method="POST">
+        <p>
+            <label for="name">Ім’я:</label>
+            <input name="name" type="text" id="name" required>
+        </p>
+        <p>
+            <label for="say">Повідомлення:</label>
+            <input name="message" type="text" id="say" required>
+        </p>
+        <button>Відправити</button>
+    </form>
 </body>
 
 </html>
